// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test <LoadingButton />:  css prop should be added 1`] = `
.c0 {
  box-sizing: border-box;
  padding-left: 32px;
  padding-right: 32px;
  max-height: 44px;
  min-height: 44px;
  font-size: bodyHeading;
  border: 0;
  border-radius: 4px;
  border-color: transparent;
  color: #FFFFFF;
  background-color: #2CAACA;
  background-color: #2CAACA;
  position: relative;
  -webkit-transition: all 0.3s cubic-bezier(0.53,0.01,0.36,1.63);
  transition: all 0.3s cubic-bezier(0.53,0.01,0.36,1.63);
  display: inline-block;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: 0;
  text-align: center;
  line-height: inherit;
  white-space: nowrap;
  cursor: pointer;
  text-transform: uppercase;
  overflow: hidden;
  background-color: black;
}

.c0:hover {
  opacity: 0.9;
  -webkit-transform: scale(1.03);
  -ms-transform: scale(1.03);
  transform: scale(1.03);
}

.c0:active {
  -webkit-transform: scale(1) translate(1px,1px);
  -ms-transform: scale(1) translate(1px,1px);
  transform: scale(1) translate(1px,1px);
}

.c1 {
  box-sizing: border-box;
  height: 8px;
  max-width: 100%;
  opacity: 0;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translateX(-50%) translateY(-50%) scale(3);
  -ms-transform: translateX(-50%) translateY(-50%) scale(3);
  transform: translateX(-50%) translateY(-50%) scale(3);
  -webkit-transition: all 0.3s cubic-bezier(0.53,0.01,0.36,1.63);
  transition: all 0.3s cubic-bezier(0.53,0.01,0.36,1.63);
  object-fit: contain;
}

.c2 {
  box-sizing: border-box;
  opacity: 1;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition: all 0.3s cubic-bezier(0.53,0.01,0.36,1.63);
  transition: all 0.3s cubic-bezier(0.53,0.01,0.36,1.63);
}

<button
  class="c0"
  color="white"
  font-size="bodyHeading"
>
  <img
    alt="loading spinner"
    aria-hidden="true"
    class="c1"
    height="8px"
    opacity="0"
    src="threeDots.svg"
    transform="translateX(-50%) translateY(-50%) scale(3)"
  />
  <div
    class="c2"
    opacity="1"
    transform="scale(1)"
  />
</button>
`;

exports[`Test <LoadingButton />:  isLoading props works 1`] = `
.c0 {
  box-sizing: border-box;
  padding-left: 32px;
  padding-right: 32px;
  max-height: 44px;
  min-height: 44px;
  font-size: bodyHeading;
  border: 0;
  border-radius: 4px;
  border-color: transparent;
  color: #FFFFFF;
  background-color: #2CAACA;
  background-color: #2CAACA;
  position: relative;
  -webkit-transition: all 0.3s cubic-bezier(0.53,0.01,0.36,1.63);
  transition: all 0.3s cubic-bezier(0.53,0.01,0.36,1.63);
  pointer-events: none;
  display: inline-block;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: 0;
  text-align: center;
  line-height: inherit;
  white-space: nowrap;
  cursor: pointer;
  text-transform: uppercase;
  overflow: hidden;
}

.c0:hover {
  opacity: 0.9;
  -webkit-transform: scale(1.03);
  -ms-transform: scale(1.03);
  transform: scale(1.03);
}

.c0:active {
  -webkit-transform: scale(1) translate(1px,1px);
  -ms-transform: scale(1) translate(1px,1px);
  transform: scale(1) translate(1px,1px);
}

.c1 {
  box-sizing: border-box;
  height: 8px;
  max-width: 100%;
  opacity: 1;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translateX(-50%) translateY(-50%) scale(1);
  -ms-transform: translateX(-50%) translateY(-50%) scale(1);
  transform: translateX(-50%) translateY(-50%) scale(1);
  -webkit-transition: all 0.3s cubic-bezier(0.53,0.01,0.36,1.63);
  transition: all 0.3s cubic-bezier(0.53,0.01,0.36,1.63);
  object-fit: contain;
}

.c2 {
  box-sizing: border-box;
  opacity: 0;
  -webkit-transform: scale(0.3);
  -ms-transform: scale(0.3);
  transform: scale(0.3);
  -webkit-transition: all 0.3s cubic-bezier(0.53,0.01,0.36,1.63);
  transition: all 0.3s cubic-bezier(0.53,0.01,0.36,1.63);
}

<button
  class="c0"
  color="white"
  font-size="bodyHeading"
>
  <img
    alt="loading spinner"
    aria-hidden="true"
    class="c1"
    height="8px"
    opacity="1"
    src="threeDots.svg"
    transform="translateX(-50%) translateY(-50%) scale(1)"
  />
  <div
    class="c2"
    opacity="0"
    transform="scale(0.3)"
  />
</button>
`;

exports[`Test <LoadingButton />:  undefined css prop should be ignored 1`] = `
.c1 {
  box-sizing: border-box;
  height: 8px;
  max-width: 100%;
  opacity: 0;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translateX(-50%) translateY(-50%) scale(3);
  -ms-transform: translateX(-50%) translateY(-50%) scale(3);
  transform: translateX(-50%) translateY(-50%) scale(3);
  -webkit-transition: all 0.3s cubic-bezier(0.53,0.01,0.36,1.63);
  transition: all 0.3s cubic-bezier(0.53,0.01,0.36,1.63);
  object-fit: contain;
}

.c2 {
  box-sizing: border-box;
  opacity: 1;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition: all 0.3s cubic-bezier(0.53,0.01,0.36,1.63);
  transition: all 0.3s cubic-bezier(0.53,0.01,0.36,1.63);
}

.c0 {
  box-sizing: border-box;
  padding-left: 32px;
  padding-right: 32px;
  max-height: 44px;
  min-height: 44px;
  font-size: bodyHeading;
  border: 0;
  border-radius: 4px;
  border-color: transparent;
  color: #FFFFFF;
  background-color: #2CAACA;
  background-color: #2CAACA;
  position: relative;
  -webkit-transition: all 0.3s cubic-bezier(0.53,0.01,0.36,1.63);
  transition: all 0.3s cubic-bezier(0.53,0.01,0.36,1.63);
  display: inline-block;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: 0;
  text-align: center;
  line-height: inherit;
  white-space: nowrap;
  cursor: pointer;
  text-transform: uppercase;
  overflow: hidden;
}

.c0:hover {
  opacity: 0.9;
  -webkit-transform: scale(1.03);
  -ms-transform: scale(1.03);
  transform: scale(1.03);
}

.c0:active {
  -webkit-transform: scale(1) translate(1px,1px);
  -ms-transform: scale(1) translate(1px,1px);
  transform: scale(1) translate(1px,1px);
}

<button
  class="c0"
  color="white"
  font-size="bodyHeading"
>
  <img
    alt="loading spinner"
    aria-hidden="true"
    class="c1"
    height="8px"
    opacity="0"
    src="threeDots.svg"
    transform="translateX(-50%) translateY(-50%) scale(3)"
  />
  <div
    class="c2"
    opacity="1"
    transform="scale(1)"
  />
</button>
`;
